Fri Nov 23 03:38:39 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING,Makefile.am: With lcov 1.10, we no longer need any of our
	  hacky workarounds, so make this a requirement and simplify the rules
	  in the makefile.

Thu Nov 22 23:34:09 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am: Pass -f to lcov, which should avoid the need for the
	  patch we've been applying to lcov.

Thu Nov 22 01:34:05 GMT 2012  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc: Close excess file handles before we get the
	  fcntl() lock, just in case one of those file handles is open on the
	  lock file.
	* tests/api_backend.cc: Add regression test lockfilealreadyopen1.

Thu Nov 22 00:35:51 GMT 2012  Olly Betts <olly@survex.com>

	* common/closefrom.cc,configure.ac: On platforms with the F_MAXFD
	  fcntl but without closefrom(), we were failing to close the highest
	  numbered open fd in our closefrom() replacement.  We now also work
	  around valgrind not hiding some extra fds it has open, but then
	  complaining if we try to close them.

Wed Nov 21 22:50:21 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: When reporting valgrind error, skip any
	  warnings.

Tue Nov 20 07:26:24 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: msetweights1 makes multidb1 and multidb2
	  redundant, so remove them.

Tue Nov 20 07:21:46 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Extend msetweights1 to test the case where
	  only even docids match, so in the multi_* case, only docids from
	  one subdatabase match.

Tue Nov 20 07:04:55 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Add testcase msetweights1 which checks we
	  get the weights we expect for a two term query.

Mon Nov 19 21:17:33 GMT 2012  Olly Betts <olly@survex.com>

	* queryparser/termgenerator.cc: TermGenerator internal member can
	  never be NULL, so drop NULL test.

Sat Nov 17 20:54:50 GMT 2012  Olly Betts <olly@survex.com>
