@@ -38,7 +38,7 @@ MergePostList::~MergePostList()
 {
     LOGCALL_DTOR(MATCH, "MergePostList");
     std::vector<PostList *>::const_iterator i;
-    for (i = plists.begin(); i != plists.end(); i++) {
+    for (i = plists.begin(); i != plists.end(); ++i) {
 	delete *i;
     }
 }
@@ -100,7 +100,7 @@ MergePostList::get_termfreq_max() const
     // sum of termfreqs for all children
     Xapian::doccount total = 0;
     vector<PostList *>::const_iterator i;
-    for (i = plists.begin(); i != plists.end(); i++) {
+    for (i = plists.begin(); i != plists.end(); ++i) {
 	total += (*i)->get_termfreq_max();
     }
     return total;
@@ -113,7 +113,7 @@ MergePostList::get_termfreq_min() const
     // sum of termfreqs for all children
     Xapian::doccount total = 0;
     vector<PostList *>::const_iterator i;
-    for (i = plists.begin(); i != plists.end(); i++) {
+    for (i = plists.begin(); i != plists.end(); ++i) {
 	total += (*i)->get_termfreq_min();
     }
     return total;
@@ -126,7 +126,7 @@ MergePostList::get_termfreq_est() const
     // sum of termfreqs for all children
     Xapian::doccount total = 0;
     vector<PostList *>::const_iterator i;
-    for (i = plists.begin(); i != plists.end(); i++) {
+    for (i = plists.begin(); i != plists.end(); ++i) {
 	total += (*i)->get_termfreq_est();
     }
     return total;
@@ -171,7 +171,7 @@ MergePostList::recalc_maxweight()
     LOGCALL(MATCH, double, "MergePostList::recalc_maxweight", NO_ARGS);
     w_max = 0;
     vector<PostList *>::iterator i;
-    for (i = plists.begin(); i != plists.end(); i++) {
+    for (i = plists.begin(); i != plists.end(); ++i) {
 	try {
 	    double w = (*i)->recalc_maxweight();
 	    if (w > w_max) w_max = w;
@@ -208,7 +208,7 @@ MergePostList::get_description() const
 {
     string desc = "( Merge ";
     vector<PostList *>::const_iterator i;
-    for (i = plists.begin(); i != plists.end(); i++) {
+    for (i = plists.begin(); i != plists.end(); ++i) {
 	desc += (*i)->get_description() + " ";
     }
     return desc + ")";
