@@ -93,7 +93,7 @@ BackendManager::createdb_brass(const vector<string> &files)
 
     string dbdir = parent_dir + "/db";
     for (vector<string>::const_iterator i = files.begin();
-	 i != files.end(); i++) {
+	 i != files.end(); ++i) {
 	dbdir += '=';
 	dbdir += *i;
     }
@@ -145,7 +145,7 @@ BackendManager::createdb_chert(const vector<string> &files)
 
     string dbdir = parent_dir + "/db";
     for (vector<string>::const_iterator i = files.begin();
-	 i != files.end(); i++) {
+	 i != files.end(); ++i) {
 	dbdir += '=';
 	dbdir += *i;
     }
